--- a/home.html
+++ b/home.html
@@ -6,11 +6,11 @@
     <meta iption content="" />
     <meta r content="" />
     <title>InfraSight - Home</title>
-    <link rel="icon" href="http://127.0.0.1:5000/static/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./static/img/favicon.ico" type="image/x-icon">
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <link href="http://127.0.0.1:5000/static/css/styles.css" rel="stylesheet" />
+    <link href="./static/css/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -20,8 +20,7 @@
             <!-- Title (Wrapped Properly) -->
             <div class="w-100">
                 <a class="navbar-brand h1 text-wrap d-block text-center m-0" 
-                   style="white-space: normal; word-wrap: break-word; max-width: 100%;">
-                   DETECTING INFRASTRUCTURAL DEVELOPMENT USING SATELLITE IMAGERY AND MACHINE LEARNING
+                   style="white-space: normal; word-wrap: break-word; max-width: 100%;">DETECTING INFRASTRUCTURAL DEVELOPMENT USING SATELLITE IMAGERY AND MACHINE LEARNING
                 </a>
             </div>
             
@@ -43,8 +42,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <h2 class="section-heading text-center">About This Project</h2>
-                <p class="text-center">
-                    This study uses machine learning and satellite images to assess 
+                <p class="text-center">This study uses machine learning and satellite images to assess 
                     infrastructure development by analyzing factors like education, 
                     healthcare, farming, and economy. The model combines Random Forests 
                     and Convolutional Neural Networks (CNNs) to identify patterns in 
@@ -189,7 +187,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-4 col-12">
                     <div class="team-member text-center">
-                        <img class="mx-auto rounded-circle" src="http://127.0.0.1:5000/static/img/1.jpg" alt="..." />
+                        <img class="mx-auto rounded-circle" src="./static/img/1.jpg" alt="..." />
                         <h4 class="mt-1">Aiswaryaa Rajesh</h4>
                         <p class="text-muted mb-1">RA2111027010012</p>
                         <a class="btn btn-dark btn-social mt-1 mb-2" href="https://www.linkedin.com/in/aiswaryaa-rajesh-436261207/" target="_blank">
@@ -199,7 +197,7 @@
                 </div>
                 <div class="col-md-4 col-12">
                     <div class="team-member text-center">
-                        <img class="mx-auto rounded-circle" src="http://127.0.0.1:5000/static/img/2.jpg" alt="..." />
+                        <img class="mx-auto rounded-circle" src="./static/img/2.jpg" alt="..." />
                         <h4 class="mt-1">Vaishnavi Kishor</h4>
                         <p class="text-muted mb-1">RA2111027010021</p>
                         <a class="btn btn-dark btn-social mt-1 mb-2" href="https://www.linkedin.com/in/vaishnavi-kishor/" target="_blank">
@@ -209,7 +207,7 @@
                 </div>
                 <div class="col-md-4 col-12">
                     <div class="team-member text-center">
-                        <img class="mx-auto rounded-circle" src="http://127.0.0.1:5000/static/img/3.jpg" alt="..." />
+                        <img class="mx-auto rounded-circle" src="./static/img/3.jpg" alt="..." />
                         <h4 class="mt-1">Aryan Chaudhary</h4>
                         <p class="text-muted mb-1">RA2111027010041</p>
                         <a class="btn btn-dark btn-social mt-1 mb-2" href="https://www.linkedin.com/in/aryan-chaudhary-4072491aa/" target="_blank">
@@ -265,6 +263,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="http://127.0.0.1:5000/static/js/scripts.js"></script>
+    <script src="./static/js/scripts.js"></script>
 </body>
 </html>        
