--- a/result.html
+++ b/result.html
@@ -6,11 +6,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>InfraSight Results</title>
-        <link rel="icon" href="http://127.0.0.1:5000/static/img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./static/img/favicon.ico" type="image/x-icon">
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <link href="http://127.0.0.1:5000/static/css/styles.css" rel="stylesheet" />
+        <link href="./static/css/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>    
     </head>
@@ -20,8 +20,7 @@
                 <!-- Title (Wrapped Properly) -->
                 <div class="w-100">
                     <a class="navbar-brand h1 text-wrap d-block text-center m-0" 
-                       style="white-space: normal; word-wrap: break-word; max-width: 100%;">
-                       DETECTING INFRASTRUCTURAL DEVELOPMENT USING SATELLITE IMAGERY AND MACHINE LEARNING
+                       style="white-space: normal; word-wrap: break-word; max-width: 100%;">DETECTING INFRASTRUCTURAL DEVELOPMENT USING SATELLITE IMAGERY AND MACHINE LEARNING
                     </a>
                 </div>
             </div>
@@ -38,25 +37,7 @@
                         <h3>Analyzed Image</h3>
                         <img src="{{ ImageDisplay }}" width="100%" class="img-fluid rounded">
                     </div>  
-                    {% endif %}
-                <!--
-                    {% if status and accuracy %}
-                    <div class="col-md-5 col-12 pred2">
-                        <h3>Image Analysis Result</h3>
-                        <p>{{ status }}</p>
-                        <p>{{ accuracy }}</p>
-                    </div>
-                    {% endif %}
-                    {% if status2 and reasons %}
-                    <div class="col-lg-8 pred2">
-                        <h4>Prediction Based on Input Data</h4>
-                        <hr>
-                        <h5>{{ status2 }}</h5>
-                        <p><b>Reasons:</b> {{ reasons }}</p>
-                    </div>
-                    {% endif %}
-                -->
-                
+                    {% endif %}                
                     {% if label and accuracy_value %}
                     <div class="col-md-5 col-12 pred2">
                         <h3>Image Analysis Result</h3>
